# employeeManager-FastApi

./: Dockerfile  README.md  create_db.py  db.py  docker-compose.yml  main.py  models.py  primitive_test.py  pyproject.toml  test.db
