[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["ildar <ildar.gazizov2607@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
passlib = "^1.7.4"
sqlalchemy = "^2.0.16"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
